# ComputerGraphics2022

./: .gitignore  Circle.h  Graphics.sln  README.md
Graphics/: Arc.h  Brush.h  Circle.h  Graphics.vcxproj  Graphics.vcxproj.filters  Line.h  main.cpp
Graphics_GLSL/: CMakeLists.txt  QtGLSL.pro  configwindow.cpp  configwindow.h  configwindow.ui  glslwidget.cpp  glslwidget.h  glslwidget.ui  main.cpp  openglwidget.cpp  openglwidget.h  shader.qrc  vbotorus.cpp  vbotorus.h
Graphics_GLSL/shader/: function.frag  function.vert
Graphics_Game/: Arc.h  Bezier.h  Brush.h  CMakeLists.txt  Circle.h  Coin.cpp  Coin.h  Fill.h  Line.h  MyPaint.pro  MyPaint.pro.qtds  Player.cpp  Player.h  Polygon.h  Stage.cpp  Stage.h  StageInfo.h  TransMatrix.h  configwindow.cpp  configwindow.h  images.qrc  main.cpp  mypaint.cpp  mypaint.h  point.h  startmenu.cpp  startmenu.h  startmenu.ui  utils.h
Graphics_QT/: .gitignore  Arc.h  Bezier.h  Brush.h  CMakeLists.txt  Circle.h  Fill.h  Line.h  MyPaint.pro  Phong.cpp  Phong.h  Polygon.h  Stars.h  TransMatrix.h  canvas.cpp  canvas.h  configwindow.cpp  configwindow.h  configwindow.ui  images.qrc  light.cpp  light.h  lightwindow.cpp  lightwindow.h  lightwindow.ui  main.cpp  mypaint.cpp  mypaint.cpp.orig  mypaint.h  newwindow.cpp  newwindow.h  newwindow.ui  point.h  utils.h
Graphics_QT/QtGLSL/: CMakeLists.txt  GLSL.cpp  GLSL.h  glslwidget.cpp  glslwidget.h  main.cpp  openglwidget.h  resource.qrc
Graphics_QT/QtGLSL/shader/: function.frag
Graphics_QT/images/: treehouse.aseprite
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-ecbfff4623589d69f976.json  (+7 more)
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/Graphics_QT_autogen/: deps
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/Graphics_QT_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-Graphics_QT-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/Graphics_QT_autogen/include/: ui_mainwindow.h
